deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reverse-words
  name: reverse-words
spec:
  template:
    spec:
      containers:
      - env:
        - name: RELEASE
          value: Stage Release
        - $patch: replace
        image: image-registry.openshift-image-registry.svc:5000/reversewords-ci/reversewords:latest
        name: reverse-words
